<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:background="@color/black_overlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ingresa_con"
            android:textSize="15dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/tv_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_usuario"
                android:inputType="textEmailAddress"
                 />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/tv_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasenia"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresar"
            android:onClick="validaUsuario"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tv_error_credenciales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/error_credenciales"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:padding="10dp"
            android:visibility="invisible" />

    </LinearLayout>

    <include
        layout="@layout/content_progressbar_fullscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</RelativeLayout>


